core/force-app/main/default/objects/Task__c/fields/CronExpression__c.field-meta.xml
<CustomField>
    <fullName>CronExpression__c</fullName>
    <description>Cron Expression of the Service Scheduler</description>
    <defaultValue>&apos;0 0 1 * * * *&apos;</defaultValue>
    <label>Cron Expression</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>