core/force-app/main/default/objects/Task__c/fields/Dependencies__c.field-meta.xml
<CustomField>
    <fullName>Dependencies__c</fullName>
    <description>Dependencies of the Service Scheduler</description>
    <label>Dependencies (comma separated)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>