core/force-app/main/default/objects/Task__c/fields/Log__c.field-meta.xml
<CustomField>
    <fullName>Log__c</fullName>
    <description>Last Log of the Service Scheduler</description>
    <label>Log</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>