core/force-app/main/default/objects/Task__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <description>Reference</description>
    <label>Reference</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>