core/force-app/main/default/objects/Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Reference__c</columns>
    <columns>ApexAdapter__c</columns>
    <columns>ApexArgs__c</columns>
    <columns>State__c</columns>
    <columns>CronTriggerId__c</columns>
    <columns>On__c</columns>
    <columns>Log__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>